# latexila

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  INSTALL  INSTALL.in  Makefile.am  NEWS  README  README.in  TODO  autogen.sh  configure.ac  latexila.doap  update_pot.sh
cmake/: FindItstool.cmake  build_vala.cmake  find_vala.cmake  gettext.cmake  gresource.cmake  itstool.cmake  use_vala.cmake
data/: CMakeLists.txt  Makefile.am  build_tools.xml  completion.xml  latexhelp.html  latexila.appdata.xml  latexila.appdata.xml.in  latexila.desktop  latexila.desktop.in.in  migrate-dconf-data.sh  org.gnome.latexila.gschema.xml  org.gnome.latexila.gschema.xml.in  org.gnome.latexila.gschema.xml.in.in  remove-old-dconf-data.sh
data/build_tools/: CMakeLists.txt  Makefile.am  build_tools-de.xml  build_tools-en.xml  build_tools-es.xml  build_tools-fr.xml  build_tools-it.xml  build_tools-pt.xml  build_tools.its  build_tools.pot  build_tools.xml  fr.po  update_build_tools_pot.sh
data/build_tools/C/: build_tools.xml
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/192x192/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/images/: Makefile.am  generate_symbol.sh  generate_symbols.vala  test_generate_symbols.xml
data/images/app/: CMakeLists.txt  Makefile.am
data/images/arrows/: data.xml
data/images/delimiters/: data.xml  symbols-delimiters.gresource.xml
data/images/generate-symbols/: generate_symbol.sh
data/images/greek/: symbols-greek.gresource.xml
data/images/icons/: tree_label.license
data/images/misc-math/: data.xml
data/images/misc-text/: data.xml  symbols-misc-text.gresource.xml
data/images/operators/: data.xml
data/images/relations/: data.xml
data/images/stock-icons/: stock-icons.gresource.xml
data/templates/: CMakeLists.txt  Makefile.am  article-de.tex  article-es.tex  article-it.tex  article-pt.tex  article.xml  beamer-de.tex  beamer-es.tex  beamer-it.tex  beamer-pt.tex  beamer.xml  book-de.tex  book-es.tex  book-it.tex  book-pt.tex  book.xml  de.po  es.po  fr.po  gen_tex.sh  it.po  letter-de.tex  letter-es.tex  letter-it.tex  letter-pt.tex  letter.xml  pt_BR.po  report-de.tex  report-es.tex  report-it.tex  report-pt.tex  report.xml  templates.its  templates.pot  tex2po.sh  update_templates_pot.sh
data/templates/C/: article.xml  beamer.xml  book.xml  letter.xml  report.xml
docs/reference/: Makefile.am  latexila-docs.xml  latexila-sections.txt
help/: CMakeLists.txt  Makefile.am  de.po  help.pot  update_help_pot.sh
help/C/: CMakeLists.txt  build_tools.page  completion.page  index.page  projects.page  spell_checking.page  structure.page  synctex.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
man/: CMakeLists.txt  Makefile.am  latexila.1  latexila.1.xml
po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  el.po  eo.po  es.po  fr.po  gl.po  he.po  id.po  it.po  latexila.pot  lt.po  lv.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  zh_CN.po
src/: CMakeLists.txt  Makefile.am  app_settings.vala  application.vala  bottom_panel.vala  build_command_runner.vala  build_job_runner.vala  build_tool_dialog.vala  build_tool_runner.vala  build_tools.vala  build_tools_preferences.vala  build_view.vala  clean_build_files.vala  completion.vala  config.h.in  custom_statusbar.vala  dialogs.vala  document.vala  document_structure.vala  document_tab.vala  document_view.vala  documents_panel.vala  encodings.vala  error_entry.vala  external_command.vala  external_commands.vala  file_browser.ui  file_browser.vala  latex_menu.vala  latex_post_processor.vala  latexila.gresource.xml  latexila.vala  latexila_app.vala  log_zone.vala  main.vala  main_window.vala  main_window_build_tools.vala  main_window_documents.vala  main_window_edit.vala  main_window_file.vala  (+21 more)
src/C/: CMakeLists.txt  app_settings.c  application.c  build_tool_dialog.c  build_tool_runner.c  build_tools.c  build_view.c  clean_build_files.c  completion.c  custom_statusbar.c  dialogs.c  document.c  document_structure.c  document_tab.c  document_view.c  documents_panel.c  encodings.c  file_browser.c  latex_menu.c  latex_post_processor.c  main.c  main_window.c  menu_in_toolbar.c  most_used_symbols.c  post_processors.c  preferences_dialog.c  project_dialogs.c  projects.c  search.c  side_panel.c  structure.c  structure_model.c  symbols.c  tab_info_bar.c  templates.c  utils.c
src/evince/: Makefile.am  evince-gdbus.xml
src/gedit/: Makefile.am
src/gtkspell/: Makefile.am  gtkspell.c  gtkspell.h
src/liblatexila/: Makefile.am  latexila-build-job.c  latexila-build-job.h  latexila-build-tool.c  latexila-build-tool.h  latexila-build-tools-default.c  latexila-build-tools-default.h  latexila-build-tools-personal.c  latexila-build-tools-personal.h  latexila-build-tools.c  latexila-build-tools.h  latexila-build-view.c  latexila-build-view.h  latexila-enum-types.c.template  latexila-enum-types.h.template  latexila-post-processor-all-output.c  latexila-post-processor-all-output.h  latexila-post-processor.c  latexila-post-processor.h  latexila-synctex.c  latexila-synctex.h  latexila-types.h  latexila-utils.c  latexila-utils.h  latexila.h
src/resources/: Makefile.am  symbols-arrows.gresource.xml  symbols-misc-math.gresource.xml  symbols-operators.gresource.xml  symbols-relations.gresource.xml
src/ui/: CMakeLists.txt  Makefile.am  build_tool.ui  preferences_dialog.ui  search_and_replace.ui  ui.xml
tests/: Makefile.am  build_tools_test.xml  test-build-tools.c  test-utils.c
vapi/: config.vapi  gdk-pixbuf.vapi  gedit.vapi  glib.vapi  gtkspell-2.0.vapi  gtkspell.vapi
