AM_CPPFLAGS = $(WARN_CFLAGS)

noinst_LTLIBRARIES = liblatexila.la

liblatexila_la_SOURCES = 			\
	latexila-build-tools.c			\
	latexila-build-tools.h			\
	latexila-build-tools-default.c		\
	latexila-build-tools-default.h		\
	latexila-build-tools-personal.c		\
	latexila-build-tools-personal.h		\
	latexila-post-processor.c		\
	latexila-post-processor.h		\
	latexila-post-processor-all-output.c	\
	latexila-post-processor-all-output.h	\
	latexila-types.h

-include $(top_srcdir)/git.mk
